WebCore:

2008-05-01  Anatoli Papirovski  <apapirovski@mac.com>

        Reviewed by Dave Hyatt.

        - fix https://bugs.webkit.org/show_bug.cgi?id=18347
          Absolutely positioned image percentage width does not respect container's padding

        Test: fast/replaced/absolute-position-percentage-width.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::calcReplacedWidthUsing):

LayoutTests:

2008-05-01  Anatoli Papirovski  <apapirovski@mac.com>

        Reviewed by Dave Hyatt.

        - added a test case for https://bugs.webkit.org/show_bug.cgi?id=18347
          Absolutely positioned image percentage width does not respect container's padding

        * fast/replaced/absolute-position-percentage-width.html: Added.
        * platform/mac/fast/replaced/absolute-position-percentage-width-expected.checksum: Added.
        * platform/mac/fast/replaced/absolute-position-percentage-width-expected.png: Added.
        * platform/mac/fast/replaced/absolute-position-percentage-width-expected.txt: Added.



Canonical link: https://commits.webkit.org/26034@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32784 268f45cc-cd09-0410-ab3c-d52691b4dbfc